Device name bugfix and new Cooper device
- Potentially fixed a bug where the check for identical devices
  during broadcast mode would use the device name and not the platform
  (needs more testing!)
- GUI now supports Cooper device (ATOM one Mini)

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,21 @@ depends.mk
 *.pro.user
 
 # Qt build folders #
-#########################
+####################
 build-application-*/
 build-dct_widgets-*/
+
+# MXE build artifacts #
+#######################
+application/.qmake.stash
+application/Makefile
+application/Makefile.Debug
+application/Makefile.Release
+application/ProVideo_resource.rc
+application/debug/
+application/mocinclude.opt
+application/object_script.ProVideo.Debug
+application/object_script.ProVideo.Release
+application/provideo_plugin_import.cpp
+application/release/
+application/ui_*.h
