Updated .gitignore file
- since Qt Creator 4.8 the .pro.user files have an additional file ending
  so a wildcard was added

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ depends.mk
 
 # Qt user project files #
 #########################
-*.pro.user
+*.pro.user*
 
 # Qt build folders #
 ####################
