Start menu item is created if TargetDir is NOT under "KAYA Instruments"
As son as  <TargetDir>@ApplicationsDir@/KAYA Instruments/SDIControlPoint</TargetDir> was changed <TargetDir>@ApplicationsDir@/SDIControlPoint</TargetDir> the item was added to start menu (despite addOperation("CreateShortcut") still failing

--- a/application/QIF/packages/Application/meta/package.xml
+++ b/application/QIF/packages/Application/meta/package.xml
@@ -5,7 +5,7 @@
     <Version>3.0.0-aplha1</Version>
     <Default>true</Default>
     <ForcedInstallation>false</ForcedInstallation>
-    <!--<Script>installscript.qs</Script>-->
+    <Script>installscript.qs</Script>
     <ReleaseDate>2020-10-21</ReleaseDate>
     <SortingPriority>201</SortingPriority>
 </Package>
