--- a/application/QIF/packages/Application/meta/package.xml
+++ b/application/QIF/packages/Application/meta/package.xml
@@ -4,7 +4,7 @@
     <Description>The SDIControlPoint application</Description>
     <Version>3.0.0-aplha1</Version>
     <Default>true</Default>
-    <ForcedInstallation>false</ForcedInstallation>
+    <ForcedInstallation>true</ForcedInstallation>
     <Script>installscript.qs</Script>
     <ReleaseDate>2020-10-21</ReleaseDate>
     <SortingPriority>201</SortingPriority>
