Remove previous installation if one detected
See https://stackoverflow.com/a/46614107/1468415 for details

--- a/application/QIF/packages/Application/meta/package.xml
+++ b/application/QIF/packages/Application/meta/package.xml
@@ -8,4 +8,7 @@
     <Script>installscript.qs</Script>
     <ReleaseDate>2020-10-21</ReleaseDate>
     <SortingPriority>201</SortingPriority>
+    <UserInterfaces>
+        <UserInterface>targetwidget.ui</UserInterface>
+    </UserInterfaces>
 </Package>
