Fixed issue Add option to create Desktop shortcut during the installation #39

--- a/application/QIF/packages/Application/meta/package.xml
+++ b/application/QIF/packages/Application/meta/package.xml
@@ -10,5 +10,6 @@
     <SortingPriority>201</SortingPriority>
     <UserInterfaces>
         <UserInterface>targetwidget.ui</UserInterface>
+        <UserInterface>shortcutwidget.ui</UserInterface>
     </UserInterfaces>
 </Package>
